src/objects/PipeLine_ReDisclosure_Reason__c.object
<CustomObject><fields>
        <fullName>LoanId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LoanId</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>PipeLine_ReDisclosure_Reason</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>NewReDisclosurer_Date__c</fullName>
        <label>NewReDisclosure Date</label>
        <required>true</required>
        <type>Date</type>
    </fields><fields>
        <fullName>OldReDisclosurer_Date__c</fullName>
        <label>OldReDisclosure Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ReDisclosure_Reason__c</fullName>
        <label>ReDisclosure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>ReDisclosure History</label><nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>ReDisclosure Reason ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>ReDisclosure History</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>